k8s/customers-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  labels:
    app: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: springcommunity/spring-petclinic-customers-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  type: NodePort
  selector:
    app: customers-service
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30001
