k8s/discovery-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: springcommunity/spring-petclinic-discovery-server:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  type: NodePort
  selector:
    app: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30002
