k8s/vets-depl.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: vets-service
  labels:
    app: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: springcommunity/spring-petclinic-vets-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  type: NodePort
  selector:
    app: vets-service
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30000
